--- a/oct01pp/package.json
+++ b/oct01pp/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.0.0",
     "react-i18next": "^6.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "styled-components": "^2.2.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
